--- a/src/app/components/results/results.component.html
+++ b/src/app/components/results/results.component.html
@@ -1,1 +1,29 @@
-<p>results works!</p>
+<div class="page-wrapper container" fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="center">
+
+    <div class="quiz-col" fxFlex="70%">
+
+        <h3>Result</h3>
+
+        <div id="results" fxLayout="row wrap" fxLayoutGap="16px">
+
+            <mat-card class="result-card" 
+                fxFlex="calc(50% - 56px)">
+
+                <mat-card-header>
+                    <mat-card-title class="item-result">4 Values</mat-card-title> 
+                </mat-card-header>   
+
+                <mat-card-content>
+                    <p>E: {{ econ }}</p>
+                    <p>D: {{ dipl }}</p>
+                    <p>G: {{ govt }}</p>
+                    <p>S: {{ scty }}</p>
+                </mat-card-content>
+
+            </mat-card>
+
+        </div>
+
+    </div> 
+
+</div>
