add ideology tags

--- a/src/app/components/results/results.component.html
+++ b/src/app/components/results/results.component.html
@@ -14,10 +14,10 @@
                 </mat-card-header>   
 
                 <mat-card-content>
-                    <p>E: {{ econ }}</p>
-                    <p>D: {{ dipl }}</p>
-                    <p>G: {{ govt }}</p>
-                    <p>S: {{ scty }}</p>
+                    <p>E: {{ econTag }} ({{ econ }})</p>
+                    <p>D: {{ diplTag }} ({{ dipl }})</p>
+                    <p>G: {{ govtTag }} ({{ govt }})</p>
+                    <p>S: {{ sctyTag }} ({{ scty }})</p>
                 </mat-card-content>
 
             </mat-card>
