--- a/src/app/components/results/results.component.html
+++ b/src/app/components/results/results.component.html
@@ -14,6 +14,7 @@
                 </mat-card-header>   
 
                 <mat-card-content>
+                    <p>{{ ideology }}</p>
                     <p>E: {{ econTag }} ({{ econ }})</p>
                     <p>D: {{ diplTag }} ({{ dipl }})</p>
                     <p>G: {{ govtTag }} ({{ govt }})</p>
