--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,17 +4,19 @@
 
         <h3>Welcome!</h3>
 
-        <div id="results" fxLayout="row wrap" fxLayoutGap="16px">
+        <div id="home" fxLayout="row wrap" fxLayoutGap="16px">
 
-            <mat-card class="result-card" 
+            <mat-card class="home-card" 
                 fxFlex="calc(50% - 56px)">
 
                 <mat-card-header>
                     <mat-card-title class="item-result">What's your position?</mat-card-title> 
                 </mat-card-header>   
 
+                <div mat-card-image [style.background-image]="'url(assets/img/home_img.png)'"></div>  
+
                 <mat-card-content>
-                    <p>Welcome to the quiz</p> 
+                    <p>Welcome to the Political Position quiz, which attempts to match you to a political ideology.</p> 
                 </mat-card-content>
 
                 <mat-card-actions> 
