--- a/src/app/components/question/question.component.html
+++ b/src/app/components/question/question.component.html
@@ -2,7 +2,7 @@
 
     <div class="quiz-col" fxFlex="70%">
 
-        <h3>Question {{ current_question }}</h3>
+        <h3>Question {{ current_question }} of {{ max_questions }}</h3>
 
         <div id="questions" fxLayout="row wrap" fxLayoutGap="16px">
 
