--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,10 +2,11 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: 'Lexend Deca', Roboto, "Helvetica Neue", sans-serif; }
 
 .mat-toolbar.mat-primary {
     background-color: crimson;
+    font-family: 'Lexend Deca';
 }
 
 .page-wrapper .quiz-col {
@@ -15,6 +16,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
     h3 {
         margin-left: 15px;
+        font-family: 'Lexend Deca';
     }
 
     .mat-card {
@@ -25,7 +27,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
         margin-left: -10px;
 
         .mat-card-title{
-            font-size: 1.7em;
+            font-size: 2.0em;
+            font-family: 'Lexend Deca';
+            font-weight: bold;
         }
     }
 
@@ -35,6 +39,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
     button {
         margin: 0;
+        font-family: 'Lexend Deca';
     }
 
 }
