removed parameter from question component to avoid invalid question numbers and also browser refresh issues

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -22,7 +22,7 @@
                 <mat-card-actions> 
                     <button mat-raised-button color="primary" 
                     class="question-response"
-                    [routerLink]="['/question/1']">Let's Play!</button>
+                    [routerLink]="['/question']">Let's Play!</button>
                 </mat-card-actions>
 
             </mat-card>
